// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSCode Extension Capabilities Alignment Capability Feature Alignment should have consistent text document capabilities: text-document-capabilities-comparison 1`] = `
{
  "development": {
    "codeAction": undefined,
    "codeLens": undefined,
    "colorProvider": undefined,
    "completion": {
      "completionItem": {
        "commitCharactersSupport": true,
        "deprecatedSupport": true,
        "documentationFormat": [
          "markdown",
          "plaintext",
        ],
        "preselectSupport": true,
        "snippetSupport": true,
      },
      "completionItemKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
        ],
      },
      "contextSupport": true,
      "dynamicRegistration": true,
    },
    "definition": undefined,
    "documentHighlight": undefined,
    "documentLink": undefined,
    "documentSymbol": {
      "dynamicRegistration": true,
      "hierarchicalDocumentSymbolSupport": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "foldingRange": {
      "dynamicRegistration": true,
      "lineFoldingOnly": true,
      "rangeLimit": 5000,
    },
    "formatting": undefined,
    "hover": {
      "contentFormat": [
        "markdown",
        "plaintext",
      ],
      "dynamicRegistration": true,
    },
    "implementation": undefined,
    "onTypeFormatting": undefined,
    "publishDiagnostics": {
      "relatedInformation": true,
      "tagSupport": {
        "valueSet": [
          1,
          2,
        ],
      },
      "versionSupport": false,
    },
    "rangeFormatting": undefined,
    "references": undefined,
    "rename": undefined,
    "signatureHelp": undefined,
    "synchronization": {
      "didSave": true,
      "dynamicRegistration": true,
      "willSave": true,
      "willSaveWaitUntil": true,
    },
    "typeDefinition": undefined,
  },
  "production": {
    "codeAction": undefined,
    "codeLens": undefined,
    "colorProvider": undefined,
    "completion": undefined,
    "definition": undefined,
    "documentHighlight": undefined,
    "documentLink": undefined,
    "documentSymbol": {
      "dynamicRegistration": true,
      "hierarchicalDocumentSymbolSupport": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "foldingRange": undefined,
    "formatting": undefined,
    "hover": undefined,
    "implementation": undefined,
    "onTypeFormatting": undefined,
    "publishDiagnostics": {
      "relatedInformation": true,
      "tagSupport": {
        "valueSet": [
          1,
          2,
        ],
      },
      "versionSupport": false,
    },
    "rangeFormatting": undefined,
    "references": undefined,
    "rename": undefined,
    "signatureHelp": undefined,
    "synchronization": {
      "didSave": true,
      "dynamicRegistration": true,
      "willSave": true,
      "willSaveWaitUntil": true,
    },
    "typeDefinition": undefined,
  },
}
`;

exports[`VSCode Extension Capabilities Alignment Capability Feature Alignment should have consistent workspace capabilities: workspace-capabilities-comparison 1`] = `
{
  "development": {
    "applyEdit": true,
    "configuration": true,
    "didChangeConfiguration": {
      "dynamicRegistration": true,
    },
    "didChangeWatchedFiles": {
      "dynamicRegistration": true,
    },
    "executeCommand": {
      "dynamicRegistration": true,
    },
    "symbol": {
      "dynamicRegistration": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "workspaceEdit": {
      "documentChanges": true,
      "failureHandling": "textOnlyTransactional",
      "resourceOperations": [
        "create",
        "rename",
        "delete",
      ],
    },
    "workspaceFolders": true,
  },
  "production": {
    "applyEdit": true,
    "configuration": true,
    "didChangeConfiguration": {
      "dynamicRegistration": true,
    },
    "didChangeWatchedFiles": {
      "dynamicRegistration": true,
    },
    "executeCommand": {
      "dynamicRegistration": true,
    },
    "symbol": {
      "dynamicRegistration": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "workspaceEdit": {
      "documentChanges": true,
      "failureHandling": "textOnlyTransactional",
      "resourceOperations": [
        "create",
        "rename",
        "delete",
      ],
    },
    "workspaceFolders": true,
  },
}
`;

exports[`VSCode Extension Capabilities Alignment Client Capabilities Configuration should have consistent dynamic registration settings: dynamic-registration-comparison 1`] = `
{
  "development": {
    "textDocument": {
      "completion": true,
      "diagnostic": true,
      "documentSymbol": true,
      "foldingRange": true,
      "hover": true,
      "synchronization": true,
    },
    "workspace": {
      "didChangeConfiguration": true,
      "didChangeWatchedFiles": true,
      "executeCommand": true,
      "symbol": true,
    },
  },
  "production": {
    "textDocument": {
      "completion": undefined,
      "diagnostic": true,
      "documentSymbol": true,
      "foldingRange": undefined,
      "hover": undefined,
      "synchronization": true,
    },
    "workspace": {
      "didChangeConfiguration": true,
      "didChangeWatchedFiles": true,
      "executeCommand": true,
      "symbol": true,
    },
  },
}
`;

exports[`VSCode Extension Capabilities Alignment Client Capabilities Configuration should return development client capabilities for development mode: development-client-capabilities 1`] = `
{
  "general": {
    "markdown": {
      "parser": "marked",
      "version": "1.1.0",
    },
    "regularExpressions": {
      "engine": "ECMAScript",
      "version": "ES2020",
    },
  },
  "textDocument": {
    "completion": {
      "completionItem": {
        "commitCharactersSupport": true,
        "deprecatedSupport": true,
        "documentationFormat": [
          "markdown",
          "plaintext",
        ],
        "preselectSupport": true,
        "snippetSupport": true,
      },
      "completionItemKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
        ],
      },
      "contextSupport": true,
      "dynamicRegistration": true,
    },
    "diagnostic": {
      "dynamicRegistration": true,
    },
    "documentSymbol": {
      "dynamicRegistration": true,
      "hierarchicalDocumentSymbolSupport": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "foldingRange": {
      "dynamicRegistration": true,
      "lineFoldingOnly": true,
      "rangeLimit": 5000,
    },
    "hover": {
      "contentFormat": [
        "markdown",
        "plaintext",
      ],
      "dynamicRegistration": true,
    },
    "publishDiagnostics": {
      "relatedInformation": true,
      "tagSupport": {
        "valueSet": [
          1,
          2,
        ],
      },
      "versionSupport": false,
    },
    "synchronization": {
      "didSave": true,
      "dynamicRegistration": true,
      "willSave": true,
      "willSaveWaitUntil": true,
    },
  },
  "window": {
    "workDoneProgress": true,
  },
  "workspace": {
    "applyEdit": true,
    "configuration": true,
    "didChangeConfiguration": {
      "dynamicRegistration": true,
    },
    "didChangeWatchedFiles": {
      "dynamicRegistration": true,
    },
    "executeCommand": {
      "dynamicRegistration": true,
    },
    "symbol": {
      "dynamicRegistration": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "workspaceEdit": {
      "documentChanges": true,
      "failureHandling": "textOnlyTransactional",
      "resourceOperations": [
        "create",
        "rename",
        "delete",
      ],
    },
    "workspaceFolders": true,
  },
}
`;

exports[`VSCode Extension Capabilities Alignment Client Capabilities Configuration should return production client capabilities for production mode: production-client-capabilities 1`] = `
{
  "general": {
    "markdown": {
      "parser": "marked",
      "version": "1.1.0",
    },
    "regularExpressions": {
      "engine": "ECMAScript",
      "version": "ES2020",
    },
  },
  "textDocument": {
    "diagnostic": {
      "dynamicRegistration": true,
    },
    "documentSymbol": {
      "dynamicRegistration": true,
      "hierarchicalDocumentSymbolSupport": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "publishDiagnostics": {
      "relatedInformation": true,
      "tagSupport": {
        "valueSet": [
          1,
          2,
        ],
      },
      "versionSupport": false,
    },
    "synchronization": {
      "didSave": true,
      "dynamicRegistration": true,
      "willSave": true,
      "willSaveWaitUntil": true,
    },
  },
  "window": {
    "workDoneProgress": true,
  },
  "workspace": {
    "applyEdit": true,
    "configuration": true,
    "didChangeConfiguration": {
      "dynamicRegistration": true,
    },
    "didChangeWatchedFiles": {
      "dynamicRegistration": true,
    },
    "executeCommand": {
      "dynamicRegistration": true,
    },
    "symbol": {
      "dynamicRegistration": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "workspaceEdit": {
      "documentChanges": true,
      "failureHandling": "textOnlyTransactional",
      "resourceOperations": [
        "create",
        "rename",
        "delete",
      ],
    },
    "workspaceFolders": true,
  },
}
`;

exports[`VSCode Extension Capabilities Alignment Document Selector Consistency should exclude output channel schemes from document selectors: document-selectors-without-output-channels 1`] = `
[
  {
    "language": "apex",
    "scheme": "file",
  },
  {
    "language": "apex",
    "scheme": "vscode-test-web",
  },
]
`;

exports[`VSCode Extension Capabilities Alignment Document Selector Consistency should have consistent document selectors between client and server: document-selectors-consistency 1`] = `
[
  {
    "language": "apex",
    "scheme": "file",
  },
  {
    "language": "apex",
    "scheme": "vscode-test-web",
  },
]
`;

exports[`VSCode Extension Capabilities Alignment Mode Detection and Capabilities should detect development mode correctly: development-mode-capabilities 1`] = `
{
  "general": {
    "markdown": {
      "parser": "marked",
      "version": "1.1.0",
    },
    "regularExpressions": {
      "engine": "ECMAScript",
      "version": "ES2020",
    },
  },
  "textDocument": {
    "completion": {
      "completionItem": {
        "commitCharactersSupport": true,
        "deprecatedSupport": true,
        "documentationFormat": [
          "markdown",
          "plaintext",
        ],
        "preselectSupport": true,
        "snippetSupport": true,
      },
      "completionItemKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
        ],
      },
      "contextSupport": true,
      "dynamicRegistration": true,
    },
    "diagnostic": {
      "dynamicRegistration": true,
    },
    "documentSymbol": {
      "dynamicRegistration": true,
      "hierarchicalDocumentSymbolSupport": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "foldingRange": {
      "dynamicRegistration": true,
      "lineFoldingOnly": true,
      "rangeLimit": 5000,
    },
    "hover": {
      "contentFormat": [
        "markdown",
        "plaintext",
      ],
      "dynamicRegistration": true,
    },
    "publishDiagnostics": {
      "relatedInformation": true,
      "tagSupport": {
        "valueSet": [
          1,
          2,
        ],
      },
      "versionSupport": false,
    },
    "synchronization": {
      "didSave": true,
      "dynamicRegistration": true,
      "willSave": true,
      "willSaveWaitUntil": true,
    },
  },
  "window": {
    "workDoneProgress": true,
  },
  "workspace": {
    "applyEdit": true,
    "configuration": true,
    "didChangeConfiguration": {
      "dynamicRegistration": true,
    },
    "didChangeWatchedFiles": {
      "dynamicRegistration": true,
    },
    "executeCommand": {
      "dynamicRegistration": true,
    },
    "symbol": {
      "dynamicRegistration": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "workspaceEdit": {
      "documentChanges": true,
      "failureHandling": "textOnlyTransactional",
      "resourceOperations": [
        "create",
        "rename",
        "delete",
      ],
    },
    "workspaceFolders": true,
  },
}
`;

exports[`VSCode Extension Capabilities Alignment Mode Detection and Capabilities should detect production mode correctly: production-mode-capabilities 1`] = `
{
  "general": {
    "markdown": {
      "parser": "marked",
      "version": "1.1.0",
    },
    "regularExpressions": {
      "engine": "ECMAScript",
      "version": "ES2020",
    },
  },
  "textDocument": {
    "diagnostic": {
      "dynamicRegistration": true,
    },
    "documentSymbol": {
      "dynamicRegistration": true,
      "hierarchicalDocumentSymbolSupport": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "publishDiagnostics": {
      "relatedInformation": true,
      "tagSupport": {
        "valueSet": [
          1,
          2,
        ],
      },
      "versionSupport": false,
    },
    "synchronization": {
      "didSave": true,
      "dynamicRegistration": true,
      "willSave": true,
      "willSaveWaitUntil": true,
    },
  },
  "window": {
    "workDoneProgress": true,
  },
  "workspace": {
    "applyEdit": true,
    "configuration": true,
    "didChangeConfiguration": {
      "dynamicRegistration": true,
    },
    "didChangeWatchedFiles": {
      "dynamicRegistration": true,
    },
    "executeCommand": {
      "dynamicRegistration": true,
    },
    "symbol": {
      "dynamicRegistration": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "workspaceEdit": {
      "documentChanges": true,
      "failureHandling": "textOnlyTransactional",
      "resourceOperations": [
        "create",
        "rename",
        "delete",
      ],
    },
    "workspaceFolders": true,
  },
}
`;
